fixing page shifts by setting image widths/heights

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -24,6 +24,7 @@ header {
 header img {
     float: left;
     margin: .25rem;
+    width: 60%;
 }
 
 
